# text-editor

./: .gitignore  Cargo.toml  README.md  TODO.txt  tesl_test.drn
resources/: prefs.yaml  recent_files.txt  tokens.yaml
src/: animation.rs  camera.rs  contextual_menu.rs  cursor.rs  editable.rs  editor.rs  font.rs  input.rs  line.rs  loader.rs  main.rs  menu_actions.rs  open_ai_wrapper.rs  range.rs  range_trait.rs  render_helper.rs  selection.rs  stats.rs  style_range.rs
src/tesl/: VM.rs  compiler.rs  lexer.rs  mod.rs  parser.rs
