[package]
name = "text-editor"
version = "0.2.0"
edition = "2021"

[dependencies]
speedy2d = "1.2.0"
derivative = "2.2.0"
clipboard = "0.5.0"
lazy_static = "1.4.0"
yaml-rust = "0.4"
regex = "1"
strum = "0.23"
strum_macros = "0.23"
ifmt = "0.3.3"
itertools = "0.10.3"

[profile.release]
debug = false
lto = "fat"
codegen-units = 1
panic = "abort"