[package]
name = "text-editor"
version = "0.2.0"
edition = "2021"

[dependencies]
speedy2d = "1.2.0"
derivative = "2.2.0"
clipboard = "0.5.0"
lazy_static = "1.4.0"
serde_yaml = "0.8.23"
serde_json = "1.0.79"
serde = { version = "1.0", features = ["derive"] }
regex = "1"
strum = "0.23"
strum_macros = "0.23"
ifmt = "0.3.3"
itertools = "0.10.3"
hyper-tls = "0.5.0"
hyper = { version = "0.14.2", features = ["full"] }
tokio = { version = "1.16.1", features = ["full"] }

[profile.release]
debug = false
lto = "fat"
codegen-units = 1
panic = "abort"